Update core.md